SFUSA/force-app/main/default/objects/Quote_Request__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </CustomField>