SFUSA/force-app/main/default/objects/Quote_Request__c/fields/Case__c.field-meta.xml
<CustomField>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Quote Requests</relationshipLabel>
        <relationshipName>Quote_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>