SFUSA/force-app/main/default/objects/Quote_Request__c/fields/Item_Name__c.field-meta.xml
<CustomField>
        <fullName>Item_Name__c</fullName>
        <description>The name of the item that is being requested</description>
        <label>Item Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>