SFUSA/force-app/main/default/objects/Quote_Request__c/fields/Item_Price__c.field-meta.xml
<CustomField>
        <fullName>Item_Price__c</fullName>
        <description>The price of the item that is being requested.</description>
        <inlineHelpText>The price of the item</inlineHelpText>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>