SFUSA/force-app/main/default/objects/Quote_Request__c/fields/Item_Size__c.field-meta.xml
<CustomField>
        <fullName>Item_Size__c</fullName>
        <description>The size of the item that is being requested</description>
        <label>Item Size</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>50ML</fullName>
                </value>
                <value>
                    <fullName>100ML</fullName>
                </value>
                <value>
                    <fullName>200ML</fullName>
                </value>
                <value>
                    <fullName>355ML</fullName>
                </value>
                <value>
                    <fullName>375ML</fullName>
                </value>
                <value>
                    <fullName>750ML</fullName>
                </value>
                <value>
                    <fullName>1L</fullName>
                </value>
                <value>
                    <fullName>1.5L</fullName>
                </value>
                <value>
                    <fullName>1.75L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>