SFUSA/force-app/main/default/objects/Quote_Request__c/fields/Priority__c.field-meta.xml
<CustomField>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>