SFUSA/force-app/main/default/objects/Quote_Request__c/fields/State__c.field-meta.xml
<CustomField>
        <fullName>State__c</fullName>
        <description>The State that this Quote Request originated from</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </CustomField>