SFUSA/force-app/main/default/objects/Quote_Request__c/fields/Unavailability_Reason__c.field-meta.xml
<CustomField>
        <fullName>Unavailability_Reason__c</fullName>
        <description>Reason that the item in this Quote Request was unavailable</description>
        <inlineHelpText>Reason the item is unavailable</inlineHelpText>
        <label>Unavailability Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Allocated</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Item Not A Beam Item</fullName>
                </value>
                <value>
                    <fullName>Item Doesn’t Exist</fullName>
                </value>
                <value>
                    <fullName>Item Isn’t Ready For Quotes Yet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>